# stackoverflow_scraper

./: pyproject.toml
src/: scraper.py
tests/: test_scraper.py  utils.py
